external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/partial_type_suggestions.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W09001]: unused alias
  ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:7:16
  │
7 │     use a::m::{Self, S, A};
  │                ^^^^ Unused 'use' of alias 'm'. Consider removing it
  │
  = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03008]: too few type arguments
  ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:9:28
  │
9 │     public fun p(): vector<S
  │                            ^ Invalid instantiation of 'a::m::S'. Expected 1 type argument(s) but got 0

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:11:5
   │
 9 │     public fun p(): vector<S
   │                           - To match this '<'
10 │ 
11 │     public fun q(x: S<A
   │     ^ Expected '>'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:11:5
   │
11 │     public fun q(x: S<A
   │     ^^^^^^
   │     │
   │     Unexpected 'public'
   │     Expected '{'

warning[W09002]: unused variable
   ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:11:18
   │
11 │     public fun q(x: S<A
   │                  ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:12:1
   │
11 │     public fun q(x: S<A
   │                      - To match this '<'
12 │ }
   │ ^ Expected '>'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:12:1
   │
12 │ }
   │ ^
   │ │
   │ Unexpected '}'
   │ Expected ',' or ')'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/partial_type_suggestions.move:14:1
   │
11 │     public fun q(x: S<A
   │                 - To match this '('
   ·
14 │ 
   │ ^ Expected ')'
